--- a/djangocmsdemo/templates/base.html
+++ b/djangocmsdemo/templates/base.html
@@ -10,7 +10,7 @@
 {% include "includes/head.html"%}
 {% endblock head %}
 
-<body class="{% block body_class %}{% endblock %}">
+<body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
   {% block header %}
   {% include "includes/header.html" with parent=site_root calling_page=self %}
   {% endblock header %}
