--- a/djangocmsdemo/static/css/style.css
+++ b/djangocmsdemo/static/css/style.css
@@ -1,3 +1,104 @@
-h1 {
-  color: #f66;
+section {
+  display: grid;
+  width: 80vw;
+  margin: 5vh auto;
+  grid-gap: 1vh;
+  grid-template-columns: 24.25% 24.25% 24.25% 24.25%;
+}
+
+.box {
+  height: 30vh;
+  transition: 0.4s ease all 0.1s;
+}
+
+header, footer  {
+  width: 100vw;
+  height: 15vh;
+  background-color: #001;
+}
+
+@media (min-width: 960px) {
+  .a {
+    grid-column: 1;
+    grid-row: 1;
+    background-color: #003f5c;
+  }
+  .b {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: #58508d;
+  }
+  .c {
+    grid-column: 3 / 5;
+    grid-row: 1;
+    background-color: #bc5090;
+  }
+  .d {
+    grid-column: 1;
+    grid-row: 2;
+    background-color: #ffa600;
+  }
+  .e {
+    grid-column: 2 / 4;
+    grid-row: 2;
+    background-color: #ef5d56;
+  }
+  .f {
+    grid-column: 4;
+    grid-row: 2;
+    background-color: #9671d6;
+  }
+  .g {
+    grid-column: 1 / 3;
+    grid-row: 3;
+    background-color: #38853e;
+  }
+  .h {
+    grid-column: 3 / 5;
+    grid-row: 3;
+    background-color: #ff0000;
+  }
+}
+
+@media (max-width: 960px) {
+  .a {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    background-color: #003f5c;
+  }
+  .b {
+    grid-column: 3 / 5;
+    grid-row: 1;
+    background-color: #58508d;
+  }
+  .c {
+    grid-column: 1 / 5;
+    grid-row: 2;
+    background-color: #bc5090;
+  }
+  .d {
+    grid-column: 1 / 4;
+    grid-row: 3;
+    background-color: #ffa600;
+  }
+  .e {
+    grid-column: 4;
+    grid-row: 3;
+    background-color: #ef5d56;
+  }
+  .f {
+    grid-column: 1 / 3;
+    grid-row: 4;
+    background-color: #9671d6;
+  }
+  .g {
+    grid-column: 3 / 5;
+    grid-row: 4;
+    background-color: #38853e;
+  }
+  .h {
+    grid-column: 1 / 5;
+    grid-row: 5;
+    background-color: #ff0000;
+  }
 }
