--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -6,5 +6,16 @@
 {% block extra_css %} {% endblock extra_css %}
 
 {% block content %}
-  <h1>This works</h1>
+<h1 class="text-center">{{ page.title }}</h1>
+<section>
+  <div class="box a"></div>
+  <div class="box b"></div>
+  <div class="box c"></div>
+  <div class="box d"></div>
+  <div class="box e"></div>
+  <div class="box f"></div>
+  <div class="box g"></div>
+  <div class="box h"></div>
+</section>
+ 
 {% endblock content %}
