--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block body_class %}custom-homepage-class{% endblock %}
+{% block body_class %}home{% endblock %}
 
 {% block extra_css %} {% endblock extra_css %}
 
