--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static wagtailcore_tags %}
 
 {% block body_class %}contact{% endblock %}
 
@@ -8,14 +8,12 @@
 {% block content %}
 <h1 class="text-center">{{ page.title }}</h1>
 <section>
-  <div class="box a"></div>
-  <div class="box b"></div>
-  <div class="box c"></div>
-  <div class="box d"></div>
-  <div class="box e"></div>
-  <div class="box f"></div>
-  <div class="box g"></div>
-  <div class="box h"></div>
+  {{ page.intro|richtext }}
+        <form action="{% pageurl page %}" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit">
+        </form>
 </section>
  
 {% endblock content %}
