--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static wagtailcore_tags %}
+{% load static wagtailcore_tags widget_tweaks %}
 
 {% block body_class %}contact{% endblock %}
 
@@ -9,11 +9,31 @@
 <h1 class="text-center">{{ page.title }}</h1>
 <section>
   {{ page.intro|richtext }}
-        <form action="{% pageurl page %}" method="POST">
+        {% comment %} <form action="{% pageurl page %}" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit">
-        </form>
+        </form> {% endcomment %}
+        <form action="{% pageurl page %}" method="POST">
+    {% csrf_token %}
+
+    {% if form.non_field_errors %}
+      <div class="alert alert-danger" role="alert">
+        {% for error in form.non_field_errors %}
+          {{ error }}
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    {% for field in form.visible_fields %}
+      <div class="form-group">
+        {{ field.label_tag }}
+        {% render_field field class+="form-control" %}
+      </div>
+    {% endfor %}
+
+    <button type="submit" class="btn btn-primary" >Submit</button>
+</form>
 </section>
  
 {% endblock content %}
