--- a/djangocmsdemo/templates/base.html
+++ b/djangocmsdemo/templates/base.html
@@ -1,6 +1,6 @@
-{% load static wagtailuserbar %}
-
-{% wagtailuserbar %}
+{% comment %} {% load static wagtailuserbar %}
+{% wagtailuserbar %} {% endcomment %}
+{% load static %}
 
 <!DOCTYPE HTML>
 
