global setting added

--- a/pycms/templates/home/home_page.html
+++ b/pycms/templates/home/home_page.html
@@ -15,5 +15,9 @@
 {{ page.body }}
 
 {{ page.text }}
+
+ <h4 class="text-white">{{ settings.global_settings.SocialMediaSettings.twitter}}</h4>
+
+<h4>{{ settings.global_settings.SocialMediaSettings.linkedin}}</h4>
  
 {% endblock content %}
