--- a/pycms/templates/includes/footer.html
+++ b/pycms/templates/includes/footer.html
@@ -1,3 +1,7 @@
 {% load static wagtailcore_tags  %}
 
-<footer></footer>
+<footer>
+ <h4 class="text-white">{{ settings.global_settings.SocialMediaSetting.twitter}}</h4>
+
+<h4>{{ settings.global_settings.SocialMediaSetting.linkedin}}</h4>
+</footer>
