--- a/pycms/templates/blog/blog_page.html
+++ b/pycms/templates/blog/blog_page.html
@@ -1,3 +1,4 @@
+ {% load wagtailcore_tags %}
  {% for thing in page.first_section.all %}
         <h2>{{thing.header}}</h2>
         {{ thing.body|richtext }}
