blog author snippeets are working now

--- a/pycms/templates/blog/blog_page.html
+++ b/pycms/templates/blog/blog_page.html
@@ -8,4 +8,9 @@
                 {{ thing.body|richtext }}
         {% endfor %}
 
+
+        {% for author in authors %}
+            <h2>{{author.name}}</h2>
+        {% endfor %}
+
     {% endblock content %}
